tests/e2e/scenarios/negative/compile_await_outside_async.ks
// compile error: await outside async context
async fun getTask(): Task<Int> = 1
val x = await getTask()
